// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CorePropertiesTable render::Editing 1`] = `
<div
  data-testid="core-properties-table"
  tabindex="0"
>
  <section
    class="pf-c-page__main-section pf-m-light editable-item"
    data-ouia-component-type="model-setup-overview"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-l-split pf-m-gutter"
        >
          <div
            class="pf-l-split__item"
          >
            <h1
              class="pf-c-title pf-m-lg"
              data-ouia-component-id="OUIA-Generated-Title-1"
              data-ouia-component-type="PF4/Title"
              data-ouia-safe="true"
            >
              Model Setup
            </h1>
          </div>
          <div
            class="pf-l-split__item"
          >
            <span
              class="pf-c-label pf-m-cyan core-properties__label"
              data-ouia-component-type="model-property"
            >
              <span
                class="pf-c-label__content"
              >
                <strong>
                  Is Scorable
                  :
                </strong>
                 
                <span>
                  Yes
                </span>
              </span>
            </span>
            <span
              class="pf-c-label pf-m-cyan core-properties__label"
              data-ouia-component-type="model-property"
            >
              <span
                class="pf-c-label__content"
              >
                <strong>
                  Function
                  :
                </strong>
                 
                <span>
                  regression
                </span>
              </span>
            </span>
            <span
              class="pf-c-label pf-m-cyan core-properties__label"
              data-ouia-component-type="model-property"
            >
              <span
                class="pf-c-label__content"
              >
                <strong>
                  Algorithm
                  :
                </strong>
                 
                <span>
                  algorithmName
                </span>
              </span>
            </span>
            <span
              class="pf-c-label pf-m-cyan core-properties__label"
              data-ouia-component-type="model-property"
            >
              <span
                class="pf-c-label__content"
              >
                <strong>
                  Initial Score
                  :
                </strong>
                 
                <span>
                  2
                </span>
              </span>
            </span>
            <span
              class="pf-c-label pf-m-cyan core-properties__label"
              data-ouia-component-type="model-property"
            >
              <span
                class="pf-c-label__content"
              >
                <strong>
                  Use Reason Codes
                  :
                </strong>
                 
                <span>
                  Yes
                </span>
              </span>
            </span>
            <span
              class="pf-c-label pf-m-cyan core-properties__label"
              data-ouia-component-type="model-property"
            >
              <span
                class="pf-c-label__content"
              >
                <strong>
                  Reason Code Algorithm
                  :
                </strong>
                 
                <span>
                  pointsBelow
                </span>
              </span>
            </span>
            <span
              class="pf-c-label pf-m-cyan core-properties__label"
              data-ouia-component-type="model-property"
            >
              <span
                class="pf-c-label__content"
              >
                <strong>
                  Baseline Score
                  :
                </strong>
                 
                <span>
                  1
                </span>
              </span>
            </span>
            <span
              class="pf-c-label pf-m-cyan core-properties__label"
              data-ouia-component-type="model-property"
            >
              <span
                class="pf-c-label__content"
              >
                <strong>
                  Baseline Method
                  :
                </strong>
                 
                <span>
                  other
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`CorePropertiesTable render::Editing 2`] = `
<div
  data-testid="core-properties-table"
>
  <section
    class="pf-c-page__main-section pf-m-light editable-item--editing"
    data-ouia-component-type="edit-model-setup"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-l-split pf-m-gutter"
        >
          <div
            class="pf-l-split__item"
          >
            <h1
              class="pf-c-title pf-m-lg"
              data-ouia-component-id="OUIA-Generated-Title-2"
              data-ouia-component-type="PF4/Title"
              data-ouia-safe="true"
            >
              Model Setup
            </h1>
          </div>
        </div>
      </div>
      <div
        class="pf-l-stack__item"
      >
        <form
          class="pf-c-form core-properties__container"
          novalidate=""
        >
          <div
            class="pf-l-level pf-m-gutter"
          >
            <div>
              <div
                class="pf-c-form__group"
              >
                <div
                  class="pf-c-form__group-label"
                >
                  <label
                    class="pf-c-form__label"
                    for="core-isScorable"
                  >
                    <span
                      class="pf-c-form__label-text"
                    >
                      Is Scorable
                    </span>
                  </label>
                   
                </div>
                <div
                  class="pf-c-form__group-control"
                >
                  <label
                    class="pf-c-switch"
                    data-ouia-component-id="is-scorable"
                    data-ouia-component-type="PF4/Switch"
                    data-ouia-safe="true"
                    for="core-isScorable"
                  >
                    <input
                      aria-label="Is scorable"
                      checked=""
                      class="pf-c-switch__input"
                      data-testid="core-properties-table-isScorable"
                      id="core-isScorable"
                      type="checkbox"
                    />
                    <span
                      class="pf-c-switch__toggle"
                    >
                      <div
                        aria-hidden="true"
                        class="pf-c-switch__toggle-icon"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          role="img"
                          viewBox="0 0 512 512"
                          width="1em"
                        >
                          <path
                            d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                          />
                        </svg>
                      </div>
                    </span>
                  </label>
                  
                </div>
              </div>
            </div>
            <div>
              <div
                class="pf-c-form__group"
                required=""
              >
                <div
                  class="pf-c-form__group-label"
                >
                  <label
                    class="pf-c-form__label"
                    for="core-functionName"
                  >
                    <span
                      class="pf-c-form__label-text"
                    >
                      Function
                    </span>
                  </label>
                   
                </div>
                <div
                  class="pf-c-form__group-control"
                >
                  <div
                    class="pf-c-select generic-selector ignore-onclickoutside"
                    data-ouia-component-id="core-functionName"
                    data-ouia-component-type="PF4/Select"
                    data-ouia-safe="true"
                  >
                    <button
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="Options menu"
                      aria-labelledby=" pf-select-toggle-id-3"
                      class="pf-c-select__toggle pf-m-disabled"
                      disabled=""
                      id="pf-select-toggle-id-3"
                      type="button"
                    >
                      <div
                        class="pf-c-select__toggle-wrapper"
                      >
                        <span
                          class="pf-c-select__toggle-text"
                        >
                          regression
                        </span>
                      </div>
                      <span
                        class="pf-c-select__toggle-arrow"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style="vertical-align: -0.125em;"
                          viewBox="0 0 320 512"
                          width="1em"
                        >
                          <path
                            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                  
                </div>
              </div>
            </div>
            <div>
              <div
                class="pf-c-form__group"
              >
                <div
                  class="pf-c-form__group-label"
                >
                  <label
                    class="pf-c-form__label"
                    for="core-algorithmName"
                  >
                    <span
                      class="pf-c-form__label-text"
                    >
                      Algorithm
                    </span>
                  </label>
                   
                </div>
                <div
                  class="pf-c-form__group-control"
                >
                  <input
                    aria-describedby="core-algorithmName"
                    aria-invalid="false"
                    class="pf-c-form-control"
                    data-ouia-component-id="algorithm"
                    data-ouia-component-type="PF4/TextInput"
                    data-ouia-safe="true"
                    data-testid="core-properties-table-algorithmName"
                    id="core-algorithmName"
                    name="core-algorithmName"
                    type="text"
                    value="algorithmName"
                  />
                  
                </div>
              </div>
            </div>
            <div>
              <div
                class="pf-c-form__group"
              >
                <div
                  class="pf-c-form__group-label"
                >
                  <label
                    class="pf-c-form__label"
                    for="core-initialScore"
                  >
                    <span
                      class="pf-c-form__label-text"
                    >
                      Initial score
                    </span>
                  </label>
                   
                </div>
                <div
                  class="pf-c-form__group-control"
                >
                  <input
                    aria-invalid="false"
                    class="pf-c-form-control"
                    data-ouia-component-id="initial-score"
                    data-ouia-component-type="PF4/TextInput"
                    data-ouia-safe="true"
                    id="core-initialScore"
                    type="number"
                    value="2"
                  />
                  
                </div>
              </div>
            </div>
            <div>
              <div
                class="pf-c-form__group"
              >
                <div
                  class="pf-c-form__group-label"
                >
                  <label
                    class="pf-c-form__label"
                    for="core-useReasonCodes"
                  >
                    <span
                      class="pf-c-form__label-text"
                    >
                      Use reason codes?
                    </span>
                  </label>
                   
                </div>
                <div
                  class="pf-c-form__group-control"
                >
                  <label
                    class="pf-c-switch"
                    data-ouia-component-id="use-reason-codes"
                    data-ouia-component-type="PF4/Switch"
                    data-ouia-safe="true"
                    for="core-useReasonCodes"
                  >
                    <input
                      aria-label="Use reason codes"
                      checked=""
                      class="pf-c-switch__input"
                      data-testid="core-properties-table-useReasonCodes"
                      id="core-useReasonCodes"
                      type="checkbox"
                    />
                    <span
                      class="pf-c-switch__toggle"
                    >
                      <div
                        aria-hidden="true"
                        class="pf-c-switch__toggle-icon"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          role="img"
                          viewBox="0 0 512 512"
                          width="1em"
                        >
                          <path
                            d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                          />
                        </svg>
                      </div>
                    </span>
                  </label>
                  
                </div>
              </div>
            </div>
            <div>
              <div
                class="pf-c-form__group"
              >
                <div
                  class="pf-c-form__group-label"
                >
                  <label
                    class="pf-c-form__label"
                    for="core-reasonCodeAlgorithm"
                  >
                    <span
                      class="pf-c-form__label-text"
                    >
                      Reason code algorithm
                    </span>
                  </label>
                   
                </div>
                <div
                  class="pf-c-form__group-control"
                >
                  <div
                    class="pf-c-select generic-selector ignore-onclickoutside"
                    data-ouia-component-id="core-reasonCodeAlgorithm"
                    data-ouia-component-type="PF4/Select"
                    data-ouia-safe="true"
                  >
                    <button
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="Options menu"
                      aria-labelledby=" pf-select-toggle-id-4"
                      class="pf-c-select__toggle"
                      id="pf-select-toggle-id-4"
                      type="button"
                    >
                      <div
                        class="pf-c-select__toggle-wrapper"
                      >
                        <span
                          class="pf-c-select__toggle-text"
                        >
                          pointsBelow
                        </span>
                      </div>
                      <span
                        class="pf-c-select__toggle-arrow"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style="vertical-align: -0.125em;"
                          viewBox="0 0 320 512"
                          width="1em"
                        >
                          <path
                            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                  
                </div>
              </div>
            </div>
            <div>
              <div
                class="pf-c-form__group"
              >
                <div
                  class="pf-c-form__group-label"
                >
                  <label
                    class="pf-c-form__label"
                    for="core-baselineScore"
                  >
                    <span
                      class="pf-c-form__label-text"
                    >
                      Baseline score
                    </span>
                  </label>
                   
                  <button
                    aria-label="More information for Baseline score"
                    class="pf-c-form__group-label-help"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 1024 1024"
                      width="1em"
                    >
                      <path
                        d="M521.3,576 C627.5,576 713.7,502 713.7,413.7 C713.7,325.4 627.6,253.6 521.3,253.6 C366,253.6 334.5,337.7 329.2,407.2 C329.2,414.3 335.2,416 343.5,416 L445,416 C450.5,416 458,415.5 460.8,406.5 C460.8,362.6 582.9,357.1 582.9,413.6 C582.9,441.9 556.2,470.9 521.3,473 C486.4,475.1 447.3,479.8 447.3,521.7 L447.3,553.8 C447.3,570.8 456.1,576 472,576 C487.9,576 521.3,576 521.3,576 M575.3,751.3 L575.3,655.3 C575.313862,651.055109 573.620137,646.982962 570.6,644 C567.638831,640.947672 563.552355,639.247987 559.3,639.29884 L463.3,639.29884 C459.055109,639.286138 454.982962,640.979863 452,644 C448.947672,646.961169 447.247987,651.047645 447.29884,655.3 L447.29884,751.3 C447.286138,755.544891 448.979863,759.617038 452,762.6 C454.961169,765.652328 459.047645,767.352013 463.3,767.30116 L559.3,767.30116 C563.544891,767.313862 567.617038,765.620137 570.6,762.6 C573.659349,759.643612 575.360354,755.553963 575.3,751.3 M512,896 C300.2,896 128,723.9 128,512 C128,300.3 300.2,128 512,128 C723.8,128 896,300.2 896,512 C896,723.8 723.7,896 512,896 M512.1,0 C229.7,0 0,229.8 0,512 C0,794.2 229.8,1024 512.1,1024 C794.4,1024 1024,794.3 1024,512 C1024,229.7 794.4,0 512.1,0"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  class="pf-c-form__group-control"
                >
                  <input
                    aria-invalid="false"
                    class="pf-c-form-control"
                    data-ouia-component-id="baseline-score"
                    data-ouia-component-type="PF4/TextInput"
                    data-ouia-safe="true"
                    id="core-baselineScore"
                    type="number"
                    value="1"
                  />
                  
                </div>
              </div>
            </div>
            <div>
              <div
                class="pf-c-form__group"
              >
                <div
                  class="pf-c-form__group-label"
                >
                  <label
                    class="pf-c-form__label"
                    for="core-baselineMethod"
                  >
                    <span
                      class="pf-c-form__label-text"
                    >
                      Baseline method
                    </span>
                  </label>
                   
                </div>
                <div
                  class="pf-c-form__group-control"
                >
                  <div
                    class="pf-c-select generic-selector ignore-onclickoutside"
                    data-ouia-component-id="core-baselineMethod"
                    data-ouia-component-type="PF4/Select"
                    data-ouia-safe="true"
                  >
                    <button
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="Options menu"
                      aria-labelledby=" pf-select-toggle-id-5"
                      class="pf-c-select__toggle"
                      id="pf-select-toggle-id-5"
                      type="button"
                    >
                      <div
                        class="pf-c-select__toggle-wrapper"
                      >
                        <span
                          class="pf-c-select__toggle-text"
                        >
                          other
                        </span>
                      </div>
                      <span
                        class="pf-c-select__toggle-arrow"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style="vertical-align: -0.125em;"
                          viewBox="0 0 320 512"
                          width="1em"
                        >
                          <path
                            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                  
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </section>
</div>
`;

exports[`CorePropertiesTable render::Not editing 1`] = `
<div
  data-testid="core-properties-table"
  tabindex="0"
>
  <section
    class="pf-c-page__main-section pf-m-light editable-item"
    data-ouia-component-type="model-setup-overview"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-l-split pf-m-gutter"
        >
          <div
            class="pf-l-split__item"
          >
            <h1
              class="pf-c-title pf-m-lg"
              data-ouia-component-id="OUIA-Generated-Title-3"
              data-ouia-component-type="PF4/Title"
              data-ouia-safe="true"
            >
              Model Setup
            </h1>
          </div>
          <div
            class="pf-l-split__item"
          >
            <span
              class="pf-c-label pf-m-cyan core-properties__label"
              data-ouia-component-type="model-property"
            >
              <span
                class="pf-c-label__content"
              >
                <strong>
                  Is Scorable
                  :
                </strong>
                 
                <span>
                  Yes
                </span>
              </span>
            </span>
            <span
              class="pf-c-label pf-m-cyan core-properties__label"
              data-ouia-component-type="model-property"
            >
              <span
                class="pf-c-label__content"
              >
                <strong>
                  Function
                  :
                </strong>
                 
                <span>
                  regression
                </span>
              </span>
            </span>
            <span
              class="pf-c-label pf-m-cyan core-properties__label"
              data-ouia-component-type="model-property"
            >
              <span
                class="pf-c-label__content"
              >
                <strong>
                  Algorithm
                  :
                </strong>
                 
                <span>
                  algorithmName
                </span>
              </span>
            </span>
            <span
              class="pf-c-label pf-m-cyan core-properties__label"
              data-ouia-component-type="model-property"
            >
              <span
                class="pf-c-label__content"
              >
                <strong>
                  Initial Score
                  :
                </strong>
                 
                <span>
                  2
                </span>
              </span>
            </span>
            <span
              class="pf-c-label pf-m-cyan core-properties__label"
              data-ouia-component-type="model-property"
            >
              <span
                class="pf-c-label__content"
              >
                <strong>
                  Use Reason Codes
                  :
                </strong>
                 
                <span>
                  Yes
                </span>
              </span>
            </span>
            <span
              class="pf-c-label pf-m-cyan core-properties__label"
              data-ouia-component-type="model-property"
            >
              <span
                class="pf-c-label__content"
              >
                <strong>
                  Reason Code Algorithm
                  :
                </strong>
                 
                <span>
                  pointsBelow
                </span>
              </span>
            </span>
            <span
              class="pf-c-label pf-m-cyan core-properties__label"
              data-ouia-component-type="model-property"
            >
              <span
                class="pf-c-label__content"
              >
                <strong>
                  Baseline Score
                  :
                </strong>
                 
                <span>
                  1
                </span>
              </span>
            </span>
            <span
              class="pf-c-label pf-m-cyan core-properties__label"
              data-ouia-component-type="model-property"
            >
              <span
                class="pf-c-label__content"
              >
                <strong>
                  Baseline Method
                  :
                </strong>
                 
                <span>
                  other
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
